# Autonomous-Financial-Research-Agent

./: .env.example  .gitignore  .zetheta-project.json  ERROR_LOG.md  README.md  RELEASE_NOTES.md  config.py  episodic_memory.jsonl  evaluate.py  pyproject.toml  requirements.txt  test_caching.py  test_chaos.py  tool_registry.py  web_search_cache.sqlite  zetheta-project.json
agent/: core.py  disambiguation.py  llm_wrapper.py  parser.py  prompts.py
chroma_db/: chroma.sqlite3
docs/: architecture_specification_final.md  optimization_log.md  trace_gallery.md
evaluation/: __init__.py  dashboard.py  metrics.py
evaluation/benchmarks/: baseline-20260523-152321.json  baseline-20260523-152321.md  baseline-20260523-153641.json  (+2 more)
memory/: context_manager.py  episodic.py
project_info/: Project_Info_Part_01.txt  Project_Info_Part_02.txt  Project_Info_Part_03.txt  Project_Info_Part_04.txt  Project_Info_Part_05.txt  Project_Info_Part_06.txt  Project_Info_Part_07.txt  Project_Info_Part_08.txt  Project_Info_Part_09.txt  Project_Info_Part_10.txt  Project_Info_Part_11.txt  Project_Info_Part_12.txt  Project_Info_Part_13.txt  Project_Info_Part_14.txt  Project_Info_Part_15.txt
results/: challenge_1.md  challenge_2.md  challenge_3.md  challenge_4.md  challenge_5.md  challenge_6.md  challenge_7.md  challenge_8.md  evaluation_report.md  stress_test_report.md  token_usage_analysis.md
synthesis/: conflict_resolver.py  engine.py  narrative.py
tests/: test_agent.py  test_memory.py  test_synthesis.py  test_tools.py
tools/: financial_api.py  news_sentiment.py  sec_edgar.py  web_search.py
(+5 files in other folders)
